pretty much finished. Just refactor

--- a/Public/index.html
+++ b/Public/index.html
@@ -107,7 +107,7 @@
             <button id="j" name="j" class="charKey" value="j" data-state="default">J</button>
             <button id="k" name="k" class="charKey" value="k" data-state="default">K</button>
             <button id="l" name="l" class="charKey" value="l" data-state="default">L</button><br>
-            <button id="enter" name="enter" class="enter" type="submit">Enter</button>
+            <button id="enter" name="enter" class="enter" type="submit" data-state="default">Enter</button>
             <button id="z" name="z" class="charKey" value="z" data-state="default">Z</button>
             <button id="x" name="x" class="charKey" value="x" data-state="default">X</button>
             <button id="c" name="c" class="charKey" value="c" data-state="default">C</button>
@@ -115,7 +115,7 @@
             <button id="b" name="b" class="charKey" value="b" data-state="default">B</button>
             <button id="n" name="n" class="charKey" value="n" data-state="default">N</button>
             <button id="m" name="m" class="charKey" value="m" data-state="default">M</button>
-            <button id="delete" name="delete" class="delete">Delete</button>
+            <button id="delete" name="delete" class="delete" data-state="default">Delete</button>
         </div>
     </main>
 </body>
