added a modal and made the modal the default end of game window rather than the alert box

--- a/Public/index.html
+++ b/Public/index.html
@@ -9,6 +9,16 @@
     <title>Wordle clone</title>
 </head>
 <body>
+        <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <!-- try removing the span and see if it does anything-->
+            <span class="close"></span>
+            <p>Template filler words. This will be changed to reflect the results using javascript. Even removing the P tags</p>
+        </div>
+    </div>
+
     <header>
         <h1>WORDLE CLONE!!</h1>
     </header>
