added the summary results emoticon

--- a/Public/index.html
+++ b/Public/index.html
@@ -12,11 +12,10 @@
         <!-- The Modal -->
     <div id="myModal" class="modal">
         <!-- Modal content -->
-        <div class="modal-content">
-            <!-- try removing the span and see if it does anything-->
-            <span class="close"></span>
-            <p>Template filler words. This will be changed to reflect the results using javascript. Even removing the P tags</p>
+        <span class="close"></span>
+        <div class="modal-content" id="summary"> 
         </div>
+    </span>
     </div>
 
     <header>
